kubernetes/Kubeadm/res/nginx-ingress.yaml
# Install ingress controller 
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat8-ingress
  namespace: chatappns
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - "chat8api.ahmadraza.in"
      - "chat8.ahmadraza.in"
    secretName: tls-secret
  rules:
    - host: chat8api.ahmadraza.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-app-backend-service
                port:
                  number: 80
    - host: chat8.ahmadraza.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-app-frontend-service
                port:
                  number: 80


# if using kind cluster label the nodes for ingress scheduling 
# kubectl label nodes kind-worker ingress-ready=true
